--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.15.0",
+    "@googlemaps/markerclusterer": "2.0.15",
+    "@netlify/functions": "^4.2.2",
+    "@supabase/supabase-js": "2",
+    "@tanstack/react-query": "5.51.1",
+    "@vis.gl/react-google-maps": "^1.2.0",
+    "firebase": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@google/genai": "^1.15.0",
-    "tailwind-merge": "2.4.0",
-    "@supabase/supabase-js": "2",
-    "firebase": "^12.1.0",
-    "@netlify/functions": "^4.2.2",
-    "@vis.gl/react-google-maps": "^1.2.0",
-    "@googlemaps/markerclusterer": "2.0.15",
-    "@tanstack/react-query": "5.51.1"
+    "react-router-dom": "^6.30.1",
+    "tailwind-merge": "2.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
