--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "2",
     "@tanstack/react-query": "5.51.1",
     "@vis.gl/react-google-maps": "^1.2.0",
+    "csv-parser": "^3.2.0",
     "firebase": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
