--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@google/genai": "^1.15.0",
     "@googlemaps/markerclusterer": "2.0.15",
     "@netlify/functions": "^4.2.2",
-    "@supabase/supabase-js": "2",
+        "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/supabase-js": "^2.43.4",
+    "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "5.51.1",
     "@vis.gl/react-google-maps": "^1.2.0",
     "csv-parser": "^3.2.0",
