--- a/netlify/functions/tsconfig.json
+++ b/netlify/functions/tsconfig.json
@@ -10,5 +10,5 @@
     "resolveJsonModule": true
   },
   "include": ["./**/*.ts"],
-  "exclude": ["node_modules", "../../types.ts"]
+  "exclude": ["node_modules"]
 }
