feat: Fix AI search functionality and update Gemini API integration
This commit addresses the issues preventing the AI search feature from working correctly.
Key changes include:
- Updated tsconfig.json for proper module resolution in Netlify Functions.
- Adjusted Gemini API client usage in Netlify functions (gemini-search, gemini-analyze-restaurant, gemini-recommend) to align with @google/generative-ai package.
- Corrected schema type definitions and API call parameters.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,20 @@
 {
   "compilerOptions": {
     "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "lib": ["ES2022", "DOM"],
+    "skipLibCheck": true,
+    "types": ["node", "@google/generative-ai"], // "@google/genai" を "@google/generative-ai" に変更
+    "outDir": "./dist",
+    "rootDir": "./",
+    "strict": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
-    "module": "ESNext",
-    "lib": [
-      "ES2022",
-      "DOM",
-      "DOM.Iterable"
-    ],
-    "skipLibCheck": true,
-    "types": [
-      "node"
-    ],
-    "moduleResolution": "bundler",
-    "isolatedModules": true,
-    "moduleDetection": "force",
     "allowJs": true,
-    "jsx": "react-jsx",
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    },
-    "allowImportingTsExtensions": true,
-    "noEmit": true
-  }
+    "noEmit": false
+  },
+  "include": ["netlify/functions/**/*", "types/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
