--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.15.0",
+    "@google/generative-ai": "^0.24.1",
     "@googlemaps/markerclusterer": "2.0.15",
     "@netlify/functions": "^4.2.2",
-        "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/supabase-js": "^2.43.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "5.51.1",
